# mini-akinator-llm

./: main.py  pompt.md  prompt.md  pyproject.toml
data/characters/: albus_dumbledore.json  dobby.json  draco_malfoy.json  harry_potter.json  hermione_granger.json  lord_voldemort.json  ron_weasley.json  rubeus_hagrid.json  severus_snape.json  sirius_black.json
scripts/: seed_harry_potter.py
src/mini_akinator/: engine.py  llm.py  main.py  models.py  repository.py
tests/: test_engine.py
