[project]
name = "mini-akinator-llm"
version = "0.1.0"
description = "Mini akinator hybride avec moteur logique + LLM local"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ollama>=0.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[dependency-groups]
dev = [
  "mypy>=1.0.0",
  "pytest>=8.0.0",
  "ruff>=0.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true